removing test binary for dynamic array when doing make clean.

--- a/data_structures/Makefile
+++ b/data_structures/Makefile
@@ -20,7 +20,7 @@ darray_test: darray dynamic_array_test.cc
 
 
 clean:
-	rm -rf *dSYM darray
+	rm -rf *dSYM darray darray_test
 
 tags:
 	$(CTAGS) *
