--- a/data_structures/Makefile
+++ b/data_structures/Makefile
@@ -10,7 +10,7 @@ CXXFLAGS+=$(INCLUDES)
 
 SOURCES=$(ls *cpp)
 
-all: darray darray_test 
+all: 3_1 darray darray_test 
 
 darray: dynamic_array.cc 
 	$(CXX) $(CXXFLAGS) -c $< -o $@ 
@@ -18,9 +18,11 @@ darray: dynamic_array.cc
 darray_test: darray dynamic_array_test.cc
 	$(CXX) $(CXXFLAGS) darray dynamic_array_test.cc -o $@
 
+3_1: 3_1.cc
+	$(CXX) $(CXXFLAGS) 3_1.cc -o $@
 
 clean:
-	rm -rf *dSYM darray darray_test
+	rm -rf *dSYM 3_1 darray darray_test
 
 tags:
 	$(CTAGS) *
