Solution for 3.2: Reversing a singly-linked list.

--- a/data_structures/Makefile
+++ b/data_structures/Makefile
@@ -10,7 +10,7 @@ CXXFLAGS+=$(INCLUDES)
 
 SOURCES=$(ls *cpp)
 
-all: 3_1 darray darray_test 
+all: 3_1 3_2 darray darray_test 
 
 darray: dynamic_array.cc 
 	$(CXX) $(CXXFLAGS) -c $< -o $@ 
@@ -21,8 +21,11 @@ darray_test: darray dynamic_array_test.cc
 3_1: 3_1.cc
 	$(CXX) $(CXXFLAGS) 3_1.cc -o $@
 
+3_2: 3_2.cc
+	$(CXX) $(CXXFLAGS) 3_2.cc -o $@
+
 clean:
-	rm -rf *dSYM 3_1 darray darray_test
+	rm -rf *dSYM 3_2 3_1 darray darray_test
 
 tags:
 	$(CTAGS) *
